# ip-intelligence-dotnet-examples

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  FiftyOne.IpIntelligence.Core.slnf  FiftyOne.IpIntelligence.Examples.Core.slnf  FiftyOne.IpIntelligence.Examples.sln  FiftyOne.IpIntelligence.sln  README.md
Areas/: Areas.csproj  Calculations.cs  Result.cs
Examples/: FiftyOne.IpIntelligence.Examples.Core.slnf  FiftyOne.IpIntelligence.Examples.sln
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/: CMakeLists.txt  README.md
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/VisualStudio/: IpIntelligence.sln
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/VisualStudio/Examples/Base/ExampleBase/: ExampleBase.vcxproj
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/VisualStudio/Examples/C/Find Profiles/: Find Profiles.vcxproj  Find Profiles.vcxproj.filters
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/VisualStudio/Examples/C/Getting Started/: Getting Started.vcxproj.filters
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/VisualStudio/Examples/C/MemIpi/: MemIpi.vcxproj  MemIpi.vcxproj.filters
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/VisualStudio/Examples/C/Offline Processing/: Offline Processing.vcxproj.filters
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/VisualStudio/Examples/C/PerfHash/: PerfHash.vcxproj  PerfHash.vcxproj.filters
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/VisualStudio/Examples/C/Performance/: Performance.vcxproj  Performance.vcxproj.filters
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/VisualStudio/Examples/C/ProcIpi/: ProcIpi.vcxproj  ProcIpi.vcxproj.filters
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/VisualStudio/FiftyOne.IpIntelligence.C/: FiftyOne.IpIntelligence.C.vcxproj.filters
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/VisualStudio/FiftyOne.IpIntelligence.CPP/: FiftyOne.IpIntelligence.CPP.vcxproj  FiftyOne.IpIntelligence.CPP.vcxproj.filters
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/VisualStudio/FiftyOne.IpIntelligence.Tests/: FiftyOne.IpIntelligence.Tests.vcxproj
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/ci/: build-package-requirements.ps1  fetch-assets.ps1  install-package.ps1  options.json  run-performance-tests.ps1  run-unit-tests.ps1
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/docs/: Doxyfile  DoxygenLayout.xml
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/examples/Base/: ExampleBase.c  ExampleBase.h
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/examples/C/IpIntelligence/: FindProfiles.c  GettingStarted.c  MemIpi.c  OfflineProcessing.c  PerfIpi.c  Performance.c  ProcIpi.c  ReloadFromFile.c  ReloadFromMemory.c  StronglyTyped.c
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/examples/CPP/IpIntelligence/: ExampleBase.cpp  ExampleBase.hpp  GettingStarted.cpp  MetaData.cpp  ReloadFromFile.cpp  ReloadFromMemory.cpp  StronglyTyped.cpp
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/ip-intelligence-data/: README.md  evidence-gen.ps1  evidence.csv  get-lite-file-from-azure.ps1  get-lite-file-from-azure.sh
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/src/: ComponentMetaDataBuilderIpi.cpp  ComponentMetaDataCollectionIpi.cpp  ConfigIpi.cpp  ConfigIpi.hpp  EngineIpi.cpp  EngineIpi.hpp  EngineIpi.i  EvidenceIpi.cpp  EvidenceIpi.i  FiftyoneDegrees.hpp  MetaDataIpi.cpp  MetaDataIpi.hpp  ProfileMetaDataBuilderIpi.cpp  ProfileMetaDataBuilderIpi.hpp  PropertyMetaDataBuilderIpi.hpp  PropertyMetaDataCollectionForComponentIpi.cpp  PropertyMetaDataCollectionForComponentIpi.hpp  PropertyMetaDataCollectionForPropertyIpi.hpp  ResultsIpi.cpp  ResultsIpi.hpp  ResultsIpi.i  ValueMetaDataBuilderIpi.cpp  ValueMetaDataBuilderIpi.hpp  ValueMetaDataCollectionBaseIpi.cpp  ValueMetaDataCollectionBaseIpi.hpp  ValueMetaDataCollectionForProfileIpi.cpp  ValueMetaDataCollectionForProfileIpi.hpp  ValueMetaDataCollectionForPropertyIpi.cpp  ValueMetaDataCollectionForPropertyIpi.hpp  ValueMetaDataCollectionIpi.cpp  ValueMetaDataCollectionIpi.hpp  WeightedValue.i  constantsIpi.h  fiftyone.h  ipi.c  ipi.h  ipi.i  ipi_weighted_results.c  ipi_weighted_results.h
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/src/common-cxx/tests/: WellKnownBinaryToTextTests.cpp
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/src/ip-graph-cxx/: README.md
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/src/ip-graph-cxx/ci/: fetch-assets.ps1  options.json  run-integration-tests.ps1  run-unit-tests.ps1
Examples/ip-intelligence-dotnet/FiftyOne.IpIntelligence.Engine.OnPremise/ip-intelligence-cxx/test/: Constants.hpp  EngineIpIntelligenceTests.cpp  EngineIpIntelligenceTests.hpp  EngineIpiTestsFile.cpp  EngineIpiTestsMemory.cpp  ExampleFindProfilesTests.cpp  ExampleGettingStartedTests.cpp  ExampleIpIntelligenceTests.cpp  ExampleIpIntelligenceTests.hpp  ExampleMemTests.cpp  ExampleOfflineProcessingTests.cpp  ExamplePerformanceLegacyTests.cpp  ExamplePerformanceTests.cpp  ExampleProcTests.cpp  ExampleReloadFromFileTests.cpp  ExampleReloadFromMemoryTests.cpp  ExampleStronglyTypedTests.cpp  MemLeakReloadFromFileTests.cpp
(+410 files in other folders)
